# durak-server

./: .gitignore  pyproject.toml  requirements.ci.txt  requirements.txt
.circleci/: config.yml
.github/workflows/: django.yml
config/: settings.py  urls.py
config/settings/: base.py  production.py  test.py
durak/fixtures/: cards.json  draw_pile.json  draw_pile_abc123.json  game.json
durak/management/commands/: restart_game.py
durak/migrations/: 0001_initial.py  0002_auto_20200802_0238.py  0003_auto_20200802_0313.py  0004_auto_20200802_0347.py  0005_card.py  0006_auto_20200804_0247.py  0007_auto_20200804_0257.py  0007_auto_20200804_0257_squashed_0009_auto_20200816_1523.py  0008_event_result.py  0008_event_result_squashed_0010_auto_20200816_1601.py  0008_event_to_state.py  0009_auto_20200816_1523.py  0009_auto_20200903_0210.py  0009_gamevariant.py  0010_auto_20200816_1601.py  0010_auto_20200905_0316.py  0011_game_seed.py  0012_delete_drawcard.py  0013_auto_20200909_0048.py  0013_auto_20200909_0059.py  0013_auto_20200909_0124.py  0014_gamerequest.py  0014_gamerequest_squashed_0015_auto_20200920_0353.py  0015_auto_20200920_0353.py  0015_game_created_at.py  0016_event_version.py  0017_auto_20201113_2056.py  0018_auto_20201113_2248.py
durak/models/: __init__.py  card.py  event.py  game.py  player.py
durak/operations/: restart_game.py
durak/views/: __init__.py  event_view.py  game_request_view.py  game_view.py  status_view.py  user_game_view.py
tests/: conftest.py
tests/durak/views/: test_event_view.py  test_events_view.py  test_game_request_view.py  test_game_view.py  test_status_view.py  (+1 more)
tests/factories/: card_factory.py  event_factory.py  game_factory.py  player_factory.py  user_factory.py
