[tool.poetry]
name = "durak-server"
version = "0.1.0"
description = ""
authors = ["Maxim Pertsov <maxim.pertsov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0.8"

[tool.poetry.dev-dependencies]
isort = "^5.2.2"
flake8 = "^3.8.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
