[tool.poetry]
name = "durak-server"
version = "0.1.0"
description = ""
authors = ["Maxim Pertsov <maxim.pertsov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0.8"
psycopg2-binary = "^2.8.5"
dj-database-url = "^0.5.0"
djangorestframework = "^3.11.0"

[tool.poetry.dev-dependencies]
isort = "4.3.16"
flake8 = "^3.8.3"
black = "^19.10b0"
python-language-server = "^0.34.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
