[tool.poetry]
name = "durak-server"
version = "0.1.0"
description = ""
authors = ["Maxim Pertsov <maxim.pertsov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.9"
Django = "^3.1.13"
psycopg2-binary = "^2.8.5"
dj-database-url = "^0.5.0"
djangorestframework = "^3.11.0"
django-cors-headers = "^3.4.0"
whitenoise = "5.1.0"
gunicorn = "^20.0.4"
djangorestframework-simplejwt = "^4.4.0"

[tool.poetry.dev-dependencies]
isort = "4.3.16"
flake8 = "^3.8.3"
black = "^19.10b0"
python-language-server = "^0.34.1"
pytest-cov = "^2.10.0"
pytest-django = "^3.9.0"
pytest-factoryboy = "^2.0.3"
pytest-mock = "^3.2.0"
pytest-watch = "^4.2.0"
pytest-xdist = "^1.34.0"
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
